python/rregadmin/util/value_wrapper.py

# ../../../rregadmin/util/value.h 287
value_get_as_string_array = _libraries['librregadmin.so.1'].value_get_as_string_array
value_get_as_string_array.restype = POINTER(GPtrArray)
# value_get_as_string_array(in_val)
value_get_as_string_array.argtypes = [POINTER(Value)]
value_get_as_string_array.__doc__ = \
"""GPtrArray * value_get_as_string_array(unknown * in_val)
../../../rregadmin/util/value.h:287"""
# ../../../rregadmin/util/value.h 293
value_free_str_array = _libraries['librregadmin.so.1'].value_free_str_array
value_free_str_array.restype = gboolean
# value_free_str_array(in_arr)
value_free_str_array.argtypes = [POINTER(GPtrArray)]
value_free_str_array.__doc__ = \
"""gboolean value_free_str_array(GPtrArray * in_arr)
../../../rregadmin/util/value.h:293"""
# ../../../rregadmin/util/value.h 299
value_get_xml_output = _libraries['librregadmin.so.1'].value_get_xml_output
value_get_xml_output.restype = gboolean
# value_get_xml_output(in_val, in_output)
value_get_xml_output.argtypes = [POINTER(Value), POINTER(ustring)]
value_get_xml_output.__doc__ = \
"""gboolean value_get_xml_output(unknown * in_val, ustring * in_output)
../../../rregadmin/util/value.h:299"""
# ../../../rregadmin/util/value.h 305
value_debug_print = _libraries['librregadmin.so.1'].value_debug_print
value_debug_print.restype = None
# value_debug_print(in_val)
value_debug_print.argtypes = [POINTER(Value)]
value_debug_print.__doc__ = \
"""void value_debug_print(unknown * in_val)
../../../rregadmin/util/value.h:305"""
# ../../../rregadmin/util/value.h 313
value_allocated_count = _libraries['librregadmin.so.1'].value_allocated_count
value_allocated_count.restype = c_int
# value_allocated_count()
value_allocated_count.argtypes = []
value_allocated_count.__doc__ = \
"""int value_allocated_count()
../../../rregadmin/util/value.h:313"""
# ../../../rregadmin/util/value_type.h 171
value_type_from_string = _libraries['librregadmin.so.1'].value_type_from_string
value_type_from_string.restype = ValueType
# value_type_from_string(tstr)
value_type_from_string.argtypes = [STRING]
value_type_from_string.__doc__ = \
"""ValueType value_type_from_string(unknown * tstr)
../../../rregadmin/util/value_type.h:171"""
# ../../../rregadmin/util/value_type.h 179
value_type_get_string = _libraries['librregadmin.so.1'].value_type_get_string
value_type_get_string.restype = STRING
# value_type_get_string(type)
value_type_get_string.argtypes = [ValueType]
value_type_get_string.__doc__ = \
"""unknown * value_type_get_string(ValueType type)
../../../rregadmin/util/value_type.h:179"""
# ../../../rregadmin/util/value_type.h 185
value_type_get_description = _libraries['librregadmin.so.1'].value_type_get_description
value_type_get_description.restype = STRING
# value_type_get_description(type)
value_type_get_description.argtypes = [ValueType]
value_type_get_description.__doc__ = \
"""unknown * value_type_get_description(ValueType type)
../../../rregadmin/util/value_type.h:185"""
# ../../../rregadmin/util/value_type.h 191
value_type_is_valid = _libraries['librregadmin.so.1'].value_type_is_valid
value_type_is_valid.restype = gboolean
# value_type_is_valid(type)
value_type_is_valid.argtypes = [ValueType]
value_type_is_valid.__doc__ = \
"""gboolean value_type_is_valid(ValueType type)
../../../rregadmin/util/value_type.h:191"""
# ../../../rregadmin/util/value_type.h 197
value_type_is_string = _libraries['librregadmin.so.1'].value_type_is_string
value_type_is_string.restype = gboolean
# value_type_is_string(type)
value_type_is_string.argtypes = [ValueType]
value_type_is_string.__doc__ = \
"""gboolean value_type_is_string(ValueType type)
../../../rregadmin/util/value_type.h:197"""
# ../../../rregadmin/util/value_type.h 203
value_type_is_binary = _libraries['librregadmin.so.1'].value_type_is_binary
value_type_is_binary.restype = gboolean
# value_type_is_binary(type)
value_type_is_binary.argtypes = [ValueType]
value_type_is_binary.__doc__ = \
"""gboolean value_type_is_binary(ValueType type)
../../../rregadmin/util/value_type.h:203"""
# ../../../rregadmin/util/value_type.h 209
value_type_is_integral = _libraries['librregadmin.so.1'].value_type_is_integral
value_type_is_integral.restype = gboolean
# value_type_is_integral(type)
value_type_is_integral.argtypes = [ValueType]
value_type_is_integral.__doc__ = \
"""gboolean value_type_is_integral(ValueType type)
../../../rregadmin/util/value_type.h:209"""
Value_._fields_ = [
    # ../../../rregadmin/util/value.h 40
]
__all__ = ['value_create_qword', 'REG_DWORD_BIG_ENDIAN', 'REG_SZ',
           'value_encode', 'REG_BINARY', 'REG_EXPAND_SZ',
           'value_get_xml_output', 'qword_type',
           'REG_FULL_RESOURCE_DESCRIPTOR', 'value_type_is_integral',
           'value_set_bits', 'value_create_multi_string_bin',
           'value_type_get_string', 'REG_EMPTY', 'value_get_type',
           'value_type_from_string', 'value_compare', 'REG_MULTI_SZ',
           'value_create_none', 'value_type_is_valid', 'REG_LINK',
           'ValueType', 'value_create_dword_be',
           'value_is_integral_type', 'value_create_dword',
           'value_get_as_string', 'REG_QWORD', 'value_get_raw_length',
           'value_type_is_string', 'value_create_from_binary',
           'REG_AUTO', 'value_free', 'value_get_as_hexstring',
           'value_create_string', 'value_free_str_array',
           'value_copy', 'dword_type', 'REG_MAX', 'value_is_valid',
           'value_is_binary_type', 'Value', 'value_equal',
           'value_get_type_str', 'value_create_binary',
           'value_type_get_description', 'value_create_multi_string',
           'REG_QWORD_LITTLE_ENDIAN', 'REG_DWORD_LITTLE_ENDIAN',
           'value_get_as_string_array', 'value_is_string_type',
           'value_get_as_dword', 'REG_RESOURCE_REQUIREMENTS_LIST',
           'value_debug_print', 'value_get_as_binary',
           'value_create_expanded_string', 'value_type_is_binary',
           'value_allocated_count', 'REG_DWORD', 'REG_NONE',
           'value_get_as_qword', 'value_can_handle', 'Value_',
           'value_create_from_string', 'value_clear_bits',
           'REG_RESOURCE_LIST']
